Fixed left-right alignment

--- a/töötlus.css
+++ b/töötlus.css
@@ -12,7 +12,7 @@
   /* Header/Blog Title */
   .header {
     padding: 30px;
-    font-size: 40px;
+    font-size: 35px;
     text-align: center;
     background: burlywood;
   }
